[gd_scene load_steps=34 format=2]

[ext_resource path="res://scenes/objects/pi.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/AndroidControls.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/blocks.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/level_scripts/Fase5.gd" type="Script" id=4]
[ext_resource path="res://assets/img/button.png" type="Texture" id=5]
[ext_resource path="res://scenes/objects/door.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/block.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/PixelBit-Free.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/img/num/z.png" type="Texture" id=9]
[ext_resource path="res://assets/img/num/c.png" type="Texture" id=10]
[ext_resource path="res://assets/img/num/d.png" type="Texture" id=11]
[ext_resource path="res://assets/img/num/t.png" type="Texture" id=12]
[ext_resource path="res://assets/img/num/q.png" type="Texture" id=13]
[ext_resource path="res://assets/img/num/o.png" type="Texture" id=14]
[ext_resource path="res://assets/img/num/u.png" type="Texture" id=15]
[ext_resource path="res://assets/img/num/n.png" type="Texture" id=16]
[ext_resource path="res://assets/img/num/s.png" type="Texture" id=17]
[ext_resource path="res://scenes/objects/resetb.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/objects/text.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.32403, 10 )

[sub_resource type="Animation" id=2]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "push"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.121569, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 11.7657, 69.0918 )

[sub_resource type="Animation" id=13]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.964706 ), Color( 1, 1, 1, 0.890196 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.243137 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=14]
size = 30
extra_spacing_char = 22
font_data = ExtResource( 8 )

[node name="Fase5" type="Node2D"]
script = ExtResource( 4 )

[node name="real_blocks" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 131071, 0, 0, 65588, 0, 0, 196607, 0, 0, 131124, 0, 0, 262143, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196660, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262162, 0, 0, 262179, 0, 0, 262196, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327698, 0, 0, 327715, 0, 0, 327732, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393268, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458778, 0, 0, 458779, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 524288, 0, 0, 524314, 0, 0, 524315, 0, 0, 524340, 0, 0, 589824, 0, 0, 589850, 0, 0, 589851, 0, 0, 589876, 0, 0, 655360, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655386, 0, 0, 655387, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655412, 0, 0, 720896, 0, 0, 720922, 0, 0, 720923, 0, 0, 720948, 0, 0, 786432, 0, 0, 786458, 0, 0, 786459, 0, 0, 786484, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 917504, 0, 0, 917530, 0, 0, 917531, 0, 0, 917556, 0, 0, 983040, 0, 0, 983066, 0, 0, 983067, 0, 0, 983092, 0, 0, 1048576, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048628, 0, 0, 1114112, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114164, 0, 0, 1179648, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179700, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1310720, 0, 0, 1310772, 0, 0, 1441791, 0, 0, 1376308, 0, 0, 1507327, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441829, 0, 0, 1441830, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1441836, 0, 0, 1441844, 0, 0, 1572863, 0, 0, 1507380, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0 )

[node name="pi" parent="." instance=ExtResource( 1 )]
position = Vector2( 72.9377, 534.601 )

[node name="botoes" type="Node" parent="."]

[node name="zero" type="Area2D" parent="botoes"]
position = Vector2( 1248, 538.385 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/zero"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/zero"]
position = Vector2( -3.4433, 1.05945 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/zero"]
anims/push = SubResource( 2 )

[node name="um" type="Area2D" parent="botoes"]
position = Vector2( 25.2878, 275.604 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/um"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/um"]
position = Vector2( 3.56359, 0 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/um"]
anims/push = SubResource( 3 )

[node name="dois" type="Area2D" parent="botoes"]
position = Vector2( 1248, 116.416 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/dois"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/dois"]
position = Vector2( -2.80615, 0.420921 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/dois"]
anims/push = SubResource( 4 )

[node name="tres" type="Area2D" parent="botoes"]
position = Vector2( 622.827, 416 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/tres"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/tres"]
position = Vector2( -3.17026, 0.667419 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/tres"]
anims/push = SubResource( 5 )

[node name="quatro" type="Area2D" parent="botoes"]
position = Vector2( 1248, 255.407 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/quatro"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/quatro"]
position = Vector2( -3.0459, 0.927017 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/quatro"]
anims/push = SubResource( 6 )

[node name="cinco" type="Area2D" parent="botoes"]
position = Vector2( 25.5363, 407.785 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/cinco"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/cinco"]
position = Vector2( 3.27032, 0.445953 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/cinco"]
anims/push = SubResource( 7 )

[node name="seis" type="Area2D" parent="botoes"]
position = Vector2( 672, 264 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/seis"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/seis"]
position = Vector2( 2.99658, 0.374573 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/seis"]
anims/push = SubResource( 8 )

[node name="sete" type="Area2D" parent="botoes"]
position = Vector2( 1248, 407.785 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/sete"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/sete"]
position = Vector2( -3.36737, 1.12247 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/sete"]
anims/push = SubResource( 9 )

[node name="oito" type="Area2D" parent="botoes"]
position = Vector2( 622.827, 264.375 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/oito"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/oito"]
position = Vector2( -2.99661, 0.561859 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/oito"]
anims/push = SubResource( 10 )

[node name="nove" type="Area2D" parent="botoes"]
position = Vector2( 672, 416 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="botoes/nove"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/nove"]
position = Vector2( 3.67084, 0.50058 )
shape = SubResource( 1 )

[node name="animzero" type="AnimationPlayer" parent="botoes/nove"]
anims/push = SubResource( 11 )

[node name="parede" type="StaticBody2D" parent="."]
position = Vector2( 4, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="parede"]
modulate = Color( 1, 1, 1, 0.964706 )
position = Vector2( 155.388, 95.6303 )
scale = Vector2( 1, 5.7477 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="parede"]
position = Vector2( 155.377, 95.8925 )
shape = SubResource( 12 )

[node name="anim" type="AnimationPlayer" parent="parede"]
anims/destroy = SubResource( 13 )

[node name="door" parent="." instance=ExtResource( 6 )]
position = Vector2( 21.1517, 59.4723 )
scale = Vector2( 1, 1.15 )
local = "res://scenes/fases/Fase9.tscn"

[node name="Control" type="Control" parent="."]
margin_left = 532.596
margin_top = 100.393
margin_right = 762.596
margin_bottom = 140.392
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -51.3737
margin_right = 290.626
margin_bottom = 38.0
custom_fonts/font = SubResource( 14 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letras" type="Node" parent="."]

[node name="0" type="Sprite" parent="letras"]
position = Vector2( 1232.84, 497.453 )
scale = Vector2( 0.413323, 0.454592 )
z_index = -1
texture = ExtResource( 9 )

[node name="1" type="Sprite" parent="letras"]
position = Vector2( 39.2394, 239.407 )
scale = Vector2( 0.523438, 0.5 )
texture = ExtResource( 15 )

[node name="2" type="Sprite" parent="letras"]
position = Vector2( 1224, 80 )
scale = Vector2( 0.460203, 0.443939 )
texture = ExtResource( 11 )

[node name="4" type="Sprite" parent="letras"]
position = Vector2( 1232, 216 )
scale = Vector2( 0.508645, 0.473173 )
texture = ExtResource( 13 )

[node name="3" type="Sprite" parent="letras"]
position = Vector2( 600, 376 )
scale = Vector2( 0.535466, 0.489013 )
texture = ExtResource( 12 )

[node name="5" type="Sprite" parent="letras"]
position = Vector2( 40.3365, 372.152 )
scale = Vector2( 0.46114, 0.498304 )
texture = ExtResource( 10 )

[node name="6" type="Sprite" parent="letras"]
position = Vector2( 1216, 376 )
scale = Vector2( 0.526177, 0.479722 )
texture = ExtResource( 17 )

[node name="7" type="Sprite" parent="letras"]
position = Vector2( 688, 208 )
scale = Vector2( 0.464069, 0.51975 )
texture = ExtResource( 17 )

[node name="8" type="Sprite" parent="letras"]
position = Vector2( 600, 208.225 )
scale = Vector2( 0.526175, 0.512732 )
texture = ExtResource( 14 )

[node name="9" type="Sprite" parent="letras"]
position = Vector2( 688, 376 )
scale = Vector2( 0.415348, 0.443188 )
texture = ExtResource( 16 )

[node name="reset" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 995.865, -3.60717 )
scale = Vector2( 1.3, 1.3 )

[node name="AndroidControls" parent="." instance=ExtResource( 2 )]

[node name="Label" parent="." instance=ExtResource( 20 )]
margin_left = 504.208
margin_top = 22.6723
margin_right = 792.208
margin_bottom = 71.6723
text = "ordem = progresso"
[connection signal="body_entered" from="botoes/zero" to="." method="_on_0_body_entered"]
[connection signal="body_entered" from="botoes/um" to="." method="_on_um_body_entered"]
[connection signal="body_entered" from="botoes/dois" to="." method="_on_dois_body_entered"]
[connection signal="body_entered" from="botoes/tres" to="." method="_on_tres_body_entered"]
[connection signal="body_entered" from="botoes/quatro" to="." method="_on_quatro_body_entered"]
[connection signal="body_entered" from="botoes/cinco" to="." method="_on_cinco_body_entered"]
[connection signal="body_entered" from="botoes/seis" to="." method="_on_seis_body_entered"]
[connection signal="body_entered" from="botoes/sete" to="." method="_on_sete_body_entered"]
[connection signal="body_entered" from="botoes/oito" to="." method="_on_oito_body_entered"]
[connection signal="body_entered" from="botoes/nove" to="." method="_on_nove_body_entered"]
